<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/movieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/heading"
                android:textAlignment="viewStart"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="26sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/image"
                        android:cropToPadding="false"
                        android:paddingBottom="@dimen/cardview_default_radius"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:paddingTop="@dimen/cardview_default_radius" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_weight="1"
                            android:paddingLeft="8dp"
                            android:text="@string/labelYear"
                            android:textAlignment="viewStart"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/released"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="15dp"
                            android:layout_weight="1"
                            android:paddingLeft="8dp"
                            android:text="@string/labelYear"
                            android:textAlignment="viewStart"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/imdbRating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/genre"
                            android:layout_marginTop="15dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed"
                            android:paddingLeft="8dp"
                            android:text="@string/labelIMDBRating"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/genre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/year"
                            android:layout_marginTop="26dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed"
                            android:paddingLeft="8dp"
                            android:text="@string/labelGenre"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textSize="18sp" />
                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>